2023-01-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc-build/lib/bootstrap.mk:
	  Fix bug #3686.

2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc-build/lib/variables.mk:
	  Enable mos65c02 port.

2022-10-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* local/powerpc64-linux-gnu.mk:
	  Example .mk for GNU/Linux on Power 9 (as currently used by nemesis in the compile farm).

2022-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Enable regression testing for r800 port.

2022-07-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* lib/variables.mk:
	  Enable regression testing for s08-stack-auto.

2023-04-26 Philipp Klaus Krause <pkk AT spth.de>

	* lib/doc-archive.mk:
	  Fix bug #3575.

2022-11-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: move cc1.exe to the build bin directory
	  so it can be installed properly

2022-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* lib/doc-archive.mk:
	  Fix bug #3345.

2022-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Rename mcs51-stack-auto to mcs51-small-stack-auto for consistency with mcs51-small and mcs51-large-stack-auto.

2022-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* components/sdcc.mk:
	  Revert wineconsole back to wine, which should work according to the Wine User's guide (but don't revert back to wine64).

2022-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* components/sdcc.mk:
	  Use wineconsole instead of wine to invoke wine (to silence error messages when there is no display server, bug #3366).

2022-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Test use of undocumented Z80 instructions.

2022-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk,
	  local/freebsd-13-aarch64.mk:
	  Allow compile farm machines to opt into full regression testing.

2021-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: update DCF hub server