@@ -1,3 +1,8 @@
+2023-01-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sdcc-build/lib/bootstrap.mk:
+	  Fix bug #3698.
+
 2023-01-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* sdcc-build/lib/bootstrap.mk:
